# event-sorcery

./: .coderabbit.yaml  .conflict-files  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SPEC.md  cabal.project  event-sorcery.cabal  flake.nix  fourmolu.yaml  git-hooks.nix  stack.yaml
.auto-resolution/: .coderabbit.yaml  .gitignore  .yamlfmt  SPEC.md
.auto-resolution/adrs/: 0010-one-engine-multiple-bindings.md
.auto-resolution/crates/event-sorcery/: Cargo.toml
.auto-resolution/crates/event-sorcery/src/: view_backend.rs
.auto-resolution/docs/: threat-model-0.4.md
.auto-resolution/examples/complex/: README.md
.auto-resolution/examples/complex/src/: stock_alert.rs
.conflict-base-0/: SPEC.md
.conflict-base-0/adrs/: 0007-reactor-side-job-enqueue.md
.conflict-base-0/crates/sqlite-es/: Cargo.toml  README.md
.conflict-base-0/crates/sqlite-es/src/: testing.rs
.conflict-base-0/docs/: migrating-to-durable-jobs.md
.conflict-base-0/examples/: README.md
.conflict-base-0/examples/simple/: Cargo.toml
.conflict-base-0/examples/simple/migrations/: 20260513104023_init.sql
.conflict-side-0/: clippy.toml  flake.nix
.conflict-side-0/docs/: event-sourced-job-backend-spec.md  ttdd.md
.conflict-side-0/examples/complex/: Cargo.toml
.conflict-side-0/scripts/: check-examples.nu
.conflict-side-1/: .envrc  ROADMAP.md  SPEC.md
.conflict-side-1/adrs/: 0003-snapshot-discard-compaction-policy.md  0005-backend-agnostic-event-store.md
.github/workflows/: ci.yaml
.sqlx/: query-19871c098856d59714f49325ce46ed9bbc172ba4c2784cca79a8cc363ce343fe.json  query-1d35c3828099f1126dfee91906f5ba1e6108837b7008c57acd4d5b5de24dea8e.json  query-24c9c228c55b06ef7f1d461b39cf5e7258af444bc8a3e591fdf7fa7bc923fe27.json  query-31b67e2ad65c58452512ee579c468c0f2fb5b6f061ccce66c0d783643f65cce8.json  query-38580276f1b7e7a0b64b28fa3df4b65d49f3bff9ece9a18cd6eb20edeb371950.json  query-3d60ea3c9d21329c065ca477a1305ec83ec8cc4c3be677caf350960b28e34fbe.json  query-4d7bad65f4441d98a87a97cf251c6f71485fa5b5e22a38ef47f4cee6c9f88e84.json  query-587fa628a9fe4642ac0e22825a97e81d388af674f7251a9fb699f96901dcb710.json  query-5f367f145e8aed4391af7a1b2b3de8f12ab61d44f3a664f89752b34338ff0b09.json  query-6156857bd58e9504142f6b5968585aa15e149cd7bf8dd0958f024700d879af4f.json  query-79663c1d3b43ceaf9ee728e501c64b57ae2e4d6cb36ff5c65eddcda1de27342f.json  query-8583cfb342c957b555202f46b51ece85ef7fb66072ce129cb3f2f65b12c6e0e3.json  query-8cc76d6607aff9b4c5867cdc6baa44efa50ad378f35e4fa775267ff3fc773ebf.json  query-930a7770399087898ae6ac96ce5375048117486e06b21da4523d2c3c75113c32.json  query-978a25f67d0b5d2b5a21c9f298d1b7ade60c52869bd382d8494520c7ba97cd42.json  query-b4bc04ff0eb16a8161dbb82d3db237f278b579909ccf9da491a108f2ce72c9b9.json  query-c08bbb962edf1bbc8ebf232ade0df25c81041bafe14101317104406acbf6be59.json  query-d1c3210612a24af9fc04cc0d1b8612b39799289d35baa94db025caf7611b15e5.json  query-d8d7bee8e77c496d9510ccb0a632d70da8f647b4ce32ca7526a5e18d709d1d65.json  query-e1b93fbc8a1abc51b5fed15442d85031bd1121f2541d012ed78d30389bdfd09e.json
adrs/: 0001-jobs-replace-services.md  0005-backend-agnostic-event-store.md  0006-cqrs-native-durable-jobs.md  0008-entity-scoped-durable-operations.md  0009-handlers-return-events-or-one-job-dispatch.md  0009-handlers-return-events-or-one-operation.md  0010-one-engine-multiple-bindings.md
bindings/haskell/: LICENSE  event-sorcery.cabal
bindings/haskell/benchmark/: Main.hs
bindings/haskell/src/Event/Sorcery/: Aggregate.hs  Dispatch.hs  Engine.hs  Job.hs  Schema.hs  Snapshot.hs  Store.hs  Stream.hs
bindings/haskell/src/Event/Sorcery/Dispatch/: Internal.hs  TestSupport.hs  Worker.hs
bindings/haskell/src/Event/Sorcery/Engine/: Internal.hs
bindings/haskell/src/Event/Sorcery/Engine/Internal/: FFI.hs
bindings/haskell/src/Event/Sorcery/Job/: Definition.hs  Execution.hs  Worker.hs
bindings/haskell/src/Event/Sorcery/Job/Worker/: Definition.hs  Internal.hs
bindings/haskell/src/EventSorcery/: Aggregate.hs  Dispatch.hs  Engine.hs  Job.hs  Snapshot.hs  Store.hs  Stream.hs
bindings/haskell/src/EventSorcery/Dispatch/: Internal.hs  TestSupport.hs  Worker.hs
bindings/haskell/src/EventSorcery/Engine/: Acquisition.hs  Codec.hs  Internal.hs  Protocol.hs  Types.hs
bindings/haskell/src/EventSorcery/Engine/Internal/: FFI.hs
bindings/haskell/src/EventSorcery/Job/: Definition.hs  Execution.hs  Worker.hs
bindings/haskell/src/EventSorcery/Job/Worker/: Definition.hs  Internal.hs
bindings/haskell/test/: CodecSpec.hs  DispatchPropertySpec.hs  DispatchSpec.hs  DispatchWorkerSpec.hs  DomainSpec.hs  EngineSpec.hs  JobExecutionSpec.hs  JobSpec.hs  JobWorkerSpec.hs  SchemaSpec.hs  StoreSpec.hs
bindings/haskell/test/EventSorcery/Engine/: AcquisitionSpec.hs
conformance/: README.md  encoding-v1.vectors
crates/event-sorcery/: Cargo.toml
crates/event-sorcery-engine/: Cargo.toml
crates/event-sorcery-engine/src/: codec.rs  kernel.rs  lib.rs  model.rs
crates/event-sorcery-engine/tests/: sqlite_ddl.rs
crates/event-sorcery-ffi/: Cargo.toml  build.rs
crates/event-sorcery-ffi/src/: lib.rs
crates/event-sorcery/benches/: store.rs
crates/event-sorcery/src/: dependency.rs  dispatch.rs  engine.rs  job.rs  job_backend.rs  job_sqlite.rs  job_store.rs  lib.rs  lifecycle.rs  operation.rs  projection.rs  reactor.rs  schema_registry.rs  sqlite_event_repository.rs  testing.rs  wire.rs
crates/sqlite-es/: Cargo.toml
crates/sqlite-es/migrations/: 20251016210348_init.sql  20260627041347_job_queue.sql  20260627171021_job_queue_reclaim_index.sql
crates/sqlite-es/src/: event_repository.rs  lib.rs  sql_query.rs  testing.rs  view_repository.rs
ddl/postgres/: 0001_initial.sql
ddl/sqlite/: 0001_initial.sql
docs/: cqrs.md  domain.md  event-sourced-job-backend-spec.md  sqlx.md  threat-model-0.4.md
examples/: README.md
examples/basic_entity/: README.md  main.rs
examples/complex/src/: audit_log.rs  inventory.rs  main.rs  order.rs
examples/reactor/: README.md  main.rs
examples/simple/: README.md
examples/simple/src/: main.rs  support_ticket.rs
scripts/: check-examples.nu
(+16 files in other folders)
