cabal-version: 3.0
name:          event-sorcery
version:       0.4.0.0
synopsis:      Type-driven event sourcing over the event-sorcery engine
description:
  An idiomatic Haskell binding over the shared event-sorcery Rust engine.

homepage:      https://github.com/dataclique/event-sorcery
bug-reports:   https://github.com/dataclique/event-sorcery/issues
license:       MIT
license-file:  bindings/haskell/LICENSE
build-type:    Simple
category:      Database
data-files:    conformance/encoding-v1.vectors

common strict
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    CApiFFI
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    GADTs
    ImportQualifiedPost
    LinearTypes
    MultiParamTypeClasses
    MultilineStrings
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UndecidableSuperClasses

  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:          strict
  hs-source-dirs:  bindings/haskell/src
  exposed-modules:
    EventSorcery.Aggregate
    EventSorcery.Dispatch
    EventSorcery.Dispatch.TestSupport
    EventSorcery.Dispatch.Worker
    EventSorcery.Engine
    EventSorcery.Job
    EventSorcery.Job.Execution
    EventSorcery.Job.Worker
    EventSorcery.Snapshot
    EventSorcery.Store
    EventSorcery.Stream

  other-modules:
    EventSorcery.Dispatch.Internal
    EventSorcery.Engine.Internal
    EventSorcery.Engine.Internal.FFI
    EventSorcery.Job.Definition
    EventSorcery.Job.Worker.Definition
    EventSorcery.Job.Worker.Internal

  extra-libraries: event_sorcery_ffi
  build-depends:
    , async
    , base          >=4.18 && <5
    , bytestring
    , cborg
    , conduit
    , linear-base
    , text
    , transformers
    , ulid

benchmark event-sorcery-benchmarks
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/benchmark
  main-is:        Main.hs
  ghc-options:    -O2 -threaded -rtsopts
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , criterion
    , deepseq
    , event-sorcery
    , linear-base
    , text

test-suite codec-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/test
  main-is:        CodecSpec.hs
  other-modules:  Paths_event_sorcery
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery
    , text

test-suite engine-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/test
  main-is:        EngineSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery

test-suite job-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/test
  main-is:        JobSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , conduit
    , event-sorcery
    , linear-base
    , text
    , transformers

test-suite domain-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/test
  main-is:        DomainSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery
    , text

test-suite store-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/test
  main-is:        StoreSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery
    , text

test-suite dispatch-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/test
  main-is:        DispatchSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery
    , text

test-suite job-execution-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/test
  main-is:        JobExecutionSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery
    , text

test-suite job-worker-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/test
  main-is:        JobWorkerSpec.hs
  build-depends:
    , async
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery
    , text

test-suite dispatch-worker-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: bindings/haskell/test
  main-is:        DispatchWorkerSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery
    , text
