cabal-version: 3.0
name:          event-sorcery
version:       0.4.0.0
synopsis:      Type-driven event sourcing over the event-sorcery engine
description:
  An idiomatic Haskell binding over the shared event-sorcery Rust engine.

homepage:      https://github.com/dataclique/event-sorcery
bug-reports:   https://github.com/dataclique/event-sorcery/issues
license:       MIT
license-file:  LICENSE
build-type:    Simple
category:      Database

common strict
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    CApiFFI
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    GADTs
    LinearTypes
    MultiParamTypeClasses
    MultilineStrings
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UndecidableSuperClasses

  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:          strict
  hs-source-dirs:  src
  exposed-modules:
    EventSorcery.Aggregate
    EventSorcery.Engine
    EventSorcery.Job
    EventSorcery.Snapshot
    EventSorcery.Store
    EventSorcery.Stream

  other-modules:
    EventSorcery.Engine.Internal
    EventSorcery.Engine.Internal.FFI
    EventSorcery.Job.Definition

  extra-libraries: event_sorcery_ffi
  build-depends:
    , base          >=4.18 && <5
    , bytestring
    , cborg
    , conduit
    , linear-base
    , text
    , transformers

test-suite codec-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        CodecSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery
    , text

test-suite engine-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        EngineSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery

test-suite job-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        JobSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , conduit
    , event-sorcery
    , linear-base
    , text
    , transformers

test-suite domain-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        DomainSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery

test-suite store-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        StoreSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring
    , event-sorcery
    , text
