cabal-version: 3.0
name:          event-sorcery
version:       0.4.0.0
synopsis:      Type-driven event sourcing over the event-sorcery engine
description:
  An idiomatic Haskell binding over the shared event-sorcery Rust engine.

homepage:      https://github.com/dataclique/event-sorcery
bug-reports:   https://github.com/dataclique/event-sorcery/issues
license:       MIT
license-file:  LICENSE
build-type:    Simple
category:      Database

common strict
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    CApiFFI
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    GADTs
    LinearTypes
    MultiParamTypeClasses
    MultilineStrings
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances

  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:          strict
  hs-source-dirs:  src
  exposed-modules:
    EventSorcery.Engine
    EventSorcery.Engine.Codec
    EventSorcery.Engine.Protocol

  other-modules:   EventSorcery.Engine.Internal.FFI
  extra-libraries: event_sorcery_ffi
  build-depends:
    , base        >=4.18   && <5
    , bytestring  >=0.11   && <0.13
    , cborg       >=0.2.10 && <0.3
    , text        >=2.0    && <2.2

test-suite codec-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        CodecSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring     >=0.11 && <0.13
    , event-sorcery
    , tasty          >=1.5  && <1.6
    , tasty-hunit    >=0.10 && <0.11
    , text           >=2.0  && <2.2

test-suite engine-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        EngineSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring     >=0.11 && <0.13
    , event-sorcery
    , tasty          >=1.5  && <1.6
    , tasty-hunit    >=0.10 && <0.11
