cabal-version: 3.0
name:          event-sorcery
version:       0.4.0.0
synopsis:      Type-driven event sourcing over the event-sorcery engine
description:
  An idiomatic Haskell binding over the shared event-sorcery Rust engine.

homepage:      https://github.com/dataclique/event-sorcery
bug-reports:   https://github.com/dataclique/event-sorcery/issues
maintainer:    39841057+0xgleb@users.noreply.github.com
license:       MIT
license-file:  LICENSE
build-type:    Simple
category:      Database

flag development
  description: Treat compiler warnings as errors during development and CI
  default:     False
  manual:      True

common strict
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    CApiFFI
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    GADTs
    LinearTypes
    MultiParamTypeClasses
    MultilineStrings
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

  if flag(development)
    ghc-options: -Werror

library
  import:          strict
  hs-source-dirs:  src
  exposed-modules:
    EventSorcery.Engine
    EventSorcery.Job
    EventSorcery.Stream

  other-modules:
    EventSorcery.Engine.Internal
    EventSorcery.Engine.Internal.FFI
    EventSorcery.Engine.Protocol

  extra-libraries: event_sorcery_ffi
  build-depends:
    , base          >=4.18   && <5
    , bytestring    >=0.11   && <0.13
    , cborg         >=0.2.10 && <0.3
    , conduit       >=1.3.6  && <1.4
    , linear-base   >=0.5    && <0.6
    , text          >=2.0    && <2.2
    , transformers  >=0.6    && <0.7

test-suite codec-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        CodecSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring     >=0.11 && <0.13
    , event-sorcery
    , tasty          >=1.5  && <1.6
    , tasty-hunit    >=0.10 && <0.11
    , text           >=2.0  && <2.2

test-suite engine-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        EngineSpec.hs
  build-depends:
    , base           >=4.18 && <5
    , bytestring     >=0.11 && <0.13
    , event-sorcery
    , tasty          >=1.5  && <1.6
    , tasty-hunit    >=0.10 && <0.11

test-suite job-spec
  import:         strict
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        JobSpec.hs
  build-depends:
    , base           >=4.18  && <5
    , bytestring     >=0.11  && <0.13
    , conduit        >=1.3.6 && <1.4
    , event-sorcery
    , linear-base    >=0.5   && <0.6
    , transformers   >=0.6   && <0.7
