[package]
name = "event-sorcery"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
autoexamples = false

[dependencies]
async-trait.workspace = true
cqrs-es.workspace = true
sqlite-es.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
test-support = []

[[example]]
name = "basic_entity"
path = "../../examples/basic_entity/main.rs"

[[example]]
name = "projection"
path = "../../examples/projection/main.rs"

[[example]]
name = "reactor"
path = "../../examples/reactor/main.rs"

[lints]
workspace = true
