[package]
name = "event-sorcery"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
apalis.workspace = true
apalis-codec.workspace = true
apalis-core.workspace = true
apalis-sqlite.workspace = true
async-trait.workspace = true
cqrs-es.workspace = true
sqlite-es.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono = { version = "0.4.45", features = ["serde"] }
ulid = "1.2.1"

[features]
test-support = []

[lints]
workspace = true
