[package]
name = "sqlite-es"
version = "0.1.2"
edition = "2024"

[dependencies]
cqrs-es.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx = { workspace = true, features = [
  "sqlite",
  "runtime-tokio",
  "tls-rustls",
] }
chrono = "0.4.45"
tokio = { version = "1.52.3", features = ["rt", "sync"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
