[workspace]

[package]
name = "simple_example"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
cqrs-es = "0.5.0"
event-sorcery = { path = "../../crates/event-sorcery", features = [
  "test-support",
] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = [
  "sqlite",
  "chrono",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "allow"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
